# Hadou

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml
NOT_GATE/: Justfile  NOT_GATE.vcd  NOT_GATE.vvp  main.v  main_test.v
Test_Verilog/: Justfile  Test_Verilog.vcd  Test_Verilog.vvp  main.v  main_test.v
src/: compile_project.rs  create_new_project.rs  edit_project.rs  main.rs  waveform_viewer.rs
