[package]
name = "hadou"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "A TUI frontend for Icarus Verilog with Waveform viewing"
authors = ["Vaishnav-Sabari-Girish forgamesonly684@gmail.com"]
keywords = ["tui", "verilog", "hdl", "terminal", "electronics"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
catppuccin = { version = "2.5.1", features = ["ratatui"] }
chrono = { version = "0.4.42", features = ["serde"] }
crossterm = "0.29.0"
ratatui = "0.29.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
