[package]
name = "hadou"
version = "0.2.3"
edition = "2024"
license = "MIT"
description = "A TUI frontend for Icarus Verilog with Waveform viewing"
authors = ["Vaishnav-Sabari-Girish forgamesonly684@gmail.com"]
readme = "README.md"
homepage = "https://github.com/Vaishnav-Sabari-Girish/Hadou"
repository = "https://github.com/Vaishnav-Sabari-Girish/Hadou"
keywords = ["tui", "verilog", "hdl", "terminal", "electronics"]
categories = ["command-line-utilities", "development-tools"]
include = [
  "src/*",
  "Cargo.toml",
  "README.md",
  "LICENSE"
]

[dependencies]
catppuccin = { version = "2.5.1", features = ["ratatui"] }
chrono = { version = "0.4.42", features = ["serde"] }
crossterm = "0.29.0"
ratatui = "0.29.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
